fix(Footer): Fix footer alignment

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -167,6 +167,10 @@ html {
   object-fit: cover;
 }
 
+.items-center {
+  align-items: center;
+}
+
 .self-center {
   align-self: center;
 }
